# felbm_gpu

./: .gitignore  CMakeLists.txt  README.md
build_double/: CMakeCache.txt  Makefile  cmake_install.cmake  compare_cpu_gpu  felbm_gpu
docs/: PORTING_SPEC.md  SESSION_HANDOFF.md
include/felbm_gpu/: d3q19.cuh  device_csr.cuh  device_engine.cuh  gpu_common.cuh  multiphase_gpu.cuh  operator_access.h  precision.h
scripts/: make_xdmf.py
src/: compare_cpu_gpu.cu  felbm_gpu_main.cu
